fix btn visibility & padding in faq item

--- a/src/components/02 Hero/Hero.module.css
+++ b/src/components/02 Hero/Hero.module.css
@@ -222,7 +222,7 @@ h1 {
         padding-top: 337px;
         min-height: unset;
         background: #010101;
-        z-index: -4;
+        z-index: 1;
     }
 
     .hero .heroContent > div {
