--- a/src/components/06 FAQ/FAQItem.module.css
+++ b/src/components/06 FAQ/FAQItem.module.css
@@ -44,9 +44,3 @@
 .iconOpen {
     transform: rotate(180deg);
 }
-
-@media screen and (max-width: 580px) {
-    .faqItem {
-        padding: 20px 24px;
-    }
-}
